@@ -9,6 +9,8 @@
    - spark.cassandra.connection.(rpc|native).port replaced with spark.cassandra.connection.port
  * Refactored ColumnSelector to avoid circular dependency on TableDef (SPARKC-177)
  * Support for modifying C* Collections using saveToCassandra (SPARKC-147)
+ * Add the abilty to use Custom Mappers with repartitionByCassandraReplica (SPARKC-104)
+
 
 
 1.3.0 M1
